# nbgitpuller

./: .autopull_list  .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README-PLUGINS.md  README.md  README.rst  RELEASE.md  apply_redirects.py  contributing.html  dev-requirements.txt  drive_creds.json  genindex.html  index.html  install.bash  install.html  jupyter_git_pull_config.py  link.html  link.md  objects.inv  package.json  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  tox.ini  tsconfig.json  use.html  using.html  webpack.config.js
.binder/: requirements.txt
.circleci/: config.yml
.github/: dependabot.yaml
.github/workflows/: binder-badge.yml  dependabot.yaml  docs.yml  publish.yml  release.yaml  test.yml
_sources/: contributing.md.txt  index.md.txt  index.rst.txt  link.rst.txt  using.md.txt
_sources/topic/: url-options.rst.txt
_static/: documentation_options.js  jupyter.css
_static/link_gen/: link.js
binder/: link_generator.ipynb  postBuild  requirements.txt
docs/: conf.py  contributing.md  doc-requirements.txt  faq.md  index.md  index.rst  install.rst  link.html  link.js  link.rst  use.md  using.md
gitautosync/: __init__.py  cli.py  gitautosync.py  pull_from_remote.py  util.py
nbfetch/: __init__.py  handlers.py  pull.py  version.py
nbgitautosync/: __init__.py  handlers.py
nbgitpuller/: __init__.py  _compat.py  application.py  config.py  errors.py  handlers.py  hookspecs.py  plugin_helper.py  plugin_hook_specs.py  pull.py  version.py
src/: githubpuller.ts  index.ts
tests/: pull_from_remote_test.py  repohelpers.py  test_api.py  test_cli.py  test_download_puller.py  test_gdrive.py  test_gitautosync.py  test_gitpuller.py  test_plugin_helper.py  test_zip_puller.py
topic/: automatic-merging.html  repo-best-practices.html  url-options.html
(+53 files in other folders)
